k8s/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextjs
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fnb-os.iqbal-devs.xyz`)
      kind: Rule
      services:
        - name: nextjs
          port: 80
  # tls: {}
